# sprite

./: README.md  sprite.cabal
src/: Main.hs  Sprite.hs
