name:          sprite
version:       0.0.0

author:        Brian Lewis <brian@lorf.org>
maintainer:    Brian Lewis <brian@lorf.org>

license:       BSD3
license-file:  LICENSE

cabal-version: >= 1.10
build-type:    Simple

--------------------------------------------------------------------------------

executable sprite
  default-language: Haskell2010

  hs-source-dirs: src
  main-is: Main.hs

  build-depends:
    GLFW-b       == 0.*,
    JuicyPixels  == 3.*,
    OpenGL       == 2.8.*,
    base         == 4.*,
    mtl          == 2.*,
    stm          == 2.*

  ghc-options: -Wall -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

--------------------------------------------------------------------------------

source-repository head
  type:     git
  location: git://github.com/bsl/GLFW-b-demo.git
